--- a/aboutUs.html
+++ b/aboutUs.html
@@ -268,10 +268,30 @@
 								</div>
 								<!-- 标题 结束 -->
 								<div class="composition-box">
-									<div><img src="./img/about/compositionbg1.png" alt=""></div>
-									<div><img src="./img/about/compositionbg2.png" alt=""></div>
-									<div><img src="./img/about/compositionbg3.png" alt=""></div>
-									<div><img src="./img/about/compositionbg4.png" alt=""></div>
+									<div>
+										<p class="composition-p">河北华文会计师事务所</p>
+										<img src="./img/about/compositionbg1.png" alt=""  class="compositionbg" />
+										<img src="./img/about/icon-kjsj.png" alt="" class="com-img1" />
+										<img src="./img/about/icon-kjsj-1.png" alt="" class="com-img1 active" />
+									</div>
+									<div>
+										<p class="composition-p">河北国兴税务师事务所</p>
+										<img src="./img/about/compositionbg2.png" alt=""  class="compositionbg" />
+										<img src="./img/about/icon-shui.png" alt="" class="com-img1" />
+										<img src="./img/about/icon-shui-1.png" alt="" class="com-img1 active" />
+									</div>
+									<div>
+										<p class="composition-p">河北华永房地产资产评估事务所</p>
+										<img src="./img/about/compositionbg3.png" alt=""  class="compositionbg" />
+										<img src="./img/about/icon-xz.png" alt="" class="com-img1" />
+										<img src="./img/about/icon-xz-1.png" alt="" class="com-img1 active" />
+									</div>
+									<div>
+										<p class="composition-p">河北华寅工程造价咨询有限公司</p>
+										<img src="./img/about/compositionbg4.png" alt="" class="compositionbg" />
+										<img src="./img/about/icon-zj.png" alt="" class="com-img1" />
+										<img src="./img/about/icon-zj-1.png" alt="" class="com-img1 active" />
+									</div>
 								</div>
 								<div class="t-60"></div>
 								<!-- 团队图片简介模块 开始 -->
@@ -399,56 +419,45 @@
 										无论客户身在何处，华文财税均能提供所需的、无论客户身在何处，华文财税均能提供所需的无论客户身在何处，华文财税均能提供所需的
 									</div>
 								</div>
-								<div class="t-60"></div>
-
-
-								<!-- 数字数据模块 开始 -->
-								<section id="dataNumber" class="dataNumber" style="margin: 0 -1.5rem;">
-									<div class="container">
-										<div class="row dataNumber-box">
-											<div class="col-lg-6 col-md-6 col-xl-6 dataNumber-lbox">
-												<img src="./img/icon-index-dt.png" alt="" />
-											</div>
-											<div class="col-lg-6 col-md-6 col-xl-6 dataNumber-rbox">
-												<div class="dataNumber-rbox-item">
-													<div class="rbox-item-box">
-														<div class="rbox-item-namber">
-															<p class="item-namber"><span class="count">10000</span><span>+</span></p>
-															<p style="padding-top: 6px;">项目服务</p>
-														</div>
-														<i class="i-img">
-															<img src="./img/icon-bz-2.png" />
-														</i>
-													</div>
-												</div>
-												<div class="dataNumber-rbox-item">
-													<div class="rbox-item-box">
-														<div class="rbox-item-namber">
-															<p class="item-namber"><span class="count">8500</span><span>+</span></p>
-															<p style="padding-top: 6px;">服务企业</p>
-														</div>
-														<i class="i-img">
-															<img src="./img/icon-bz-2.png" />
-														</i>
-													</div>
-												</div>
-												<div class="dataNumber-rbox-item">
-													<div class="rbox-item-box">
-														<div class="rbox-item-namber">
-															<p class="item-namber"><span class="count">21</span><span>+</span></p>
-															<p style="padding-top: 6px;">遍及省市</p>
-														</div>
-														<i class="i-img">
-															<img src="./img/icon-bz-3.png" />
-														</i>
-													</div>
-												</div>
-											</div>
-										</div>
-
+								<!-- <div class="t-60"></div> -->
+								<!-- 标题 开始 -->
+								<div class="huawen-title-box">
+									<div class="titleText-t">
+										<div class="header-xian"></div>
+										<div class="header-title">分公司地址</div>
+										<div class="header-xian"></div>
 									</div>
-								</section>
-								<!-- 数字数据模块 结束 -->
+									<div class="eltitleText-t">Branch address</div>
+								</div>
+								<!-- 标题 结束 -->
+								<div class="address-box">
+									<div>
+										<div class="address-title">国兴普华税务师事务所 <span class="address-title-x"></span></div>
+										<div class="address-add">河北省石家庄市槐安西路100号紫金大厦10楼</div>
+										<div class="address-tel">0311 — 87876735</div>
+									</div>
+
+									<div>
+										<div class="address-title">国兴普华税务师事务所 <span class="address-title-x"></span></div>
+										<div class="address-add">河北省石家庄市槐安西路100号紫金大厦10楼</div>
+										<div class="address-tel">0311 — 87876735</div>
+									</div>
+
+									<div>
+										<div class="address-title">国兴普华税务师事务所 <span class="address-title-x"></span></div>
+										<div class="address-add">河北省石家庄市槐安西路100号紫金大厦10楼</div>
+										<div class="address-tel">0311 — 87876735</div>
+									</div>
+									
+									<div>
+										<div class="address-title">国兴普华税务师事务所 <span class="address-title-x"></span></div>
+										<div class="address-add">河北省石家庄市槐安西路100号紫金大厦10楼</div>
+										<div class="address-tel">0311 — 87876735</div>
+									</div>
+
+								</div>
+
+
 							</div>
 						</div>
 						<!-- 分支机构模块 结束 -->
