--- a/regulations.html
+++ b/regulations.html
@@ -367,7 +367,8 @@
 							<!-- 右侧模块 上部 开始 -->
 							<div class="rifht-imginput-box">
 								<div class="rifht-img-box">
-									<img src="./img/news/icon-zwf.png" alt="" />
+									<img src="./img/regulations-bg.png" alt="" />
+									<a href="javascript:0;" class="rifht-btn">立即了解</a>
 								</div>
 								<div class="rifht-input-box">
 									<form action="" id="" method="POST">
