--- a/joinUs-company.html
+++ b/joinUs-company.html
@@ -127,11 +127,9 @@
 						<div class="company-imgbox">
 							<img src="./img/joinUs/company-bg-1.png" alt="" />
 							<div class="company-imgbox1">
-								<img src="./img/joinUs/icon-c-quan.png" alt="">
+								<img src="./img/joinUs/icon-c-quan.png" alt="" class="img1" />
+								<img src="./img/joinUs/icon-c-quan.png" alt=""  class="img2"/>
 							</div>
-							<div class="company-imgbox2">
-									<img src="./img/joinUs/icon-c-quan.png" alt="">
-								</div>
 						</div>
 					</div>
 					
