--- a/index.html
+++ b/index.html
@@ -99,8 +99,17 @@
 							<li class="nav-item">
 								<a class="nav-link" href="">华文讲堂</a>
 							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="joinUs.html">加入我们</a>
+
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="joinUs.html" id="blog" role="button"
+									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									加入我们
+								</a>
+								<div class="dropdown-menu" aria-labelledby="blog">
+									<a class="dropdown-item" href="joinUs-company.html">华文动态</a>
+									<a class="dropdown-item" href="joinUs-campus.html">华文下午茶</a>
+									<a class="dropdown-item" href="joinUs-society.html">专业解读</a>
+								</div>
 							</li>
 						</ul>
 						<div class="call_btn">
