--- a/news.html
+++ b/news.html
@@ -190,7 +190,13 @@
                 <div class="col-xl-3 news-popular-box">
                   <div class="popular-div">
                     <div class="popular-keyWords-box">
-                      <div class="keyWords-title">热门关键词</div>
+											<div class="keyWords-title">热门关键词</div>
+
+											<div class="seach-box">
+												<input type="text" value="" placeholder="输入您想搜索的文章" placeholder-style="color: #DCDCDC;" />
+												<button style="background: url(./img/seach.png) no-repeat center;background-size: cover;"></button>
+											</div>
+
                       <div class="keyWords-items-box">
                         <div>
                           <a href="javascript:0;" class="active">财务税收</a>
