--- a/clubIntroduce-tax.html
+++ b/clubIntroduce-tax.html
@@ -198,13 +198,12 @@
 			</div>
     </section>
     <!-- 专业优势 开始 -->
+ 
     <style>
       .customer-ys{
-        background: url(./img/service/tax/ys-bg.png) no-repeat center;
-        height: 5.81rem;
+	      background: url(./img/service/tax/ys-bg.png) no-repeat center;
       }
     </style>
-
     <section id="customer-ys" class="customer-ys" style="margin-top: 0.6rem;">
       <div class="ys-box">
         <div class="ys-item-box">
@@ -234,6 +233,7 @@
         </div>
       </div>
     </section>
+
     <!-- 专业优势 结束 -->
 
     <!-- 整体服务方向 开始 -->
@@ -251,7 +251,7 @@
     <!-- 整体服务方向 结束 -->
 
     <!-- 特色服务 开始 -->
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" style="margin-top: 0.6rem;">
       <div class="aboutUs-tab-centent">
         <!-- 头部标题 开始 -->
         <div class="huawen-title-box">
@@ -402,7 +402,6 @@
     <style>
       .customer-fd{
         background: url(./img/service/tax/fd-bg.png) no-repeat center;
-        height: 6.18rem;
       }
     </style>
     <section id="customer-fd" class="customer-fd">
@@ -445,9 +444,41 @@
             <div class="eltitleText-t">Characteristic business</div>
           </div>
           <!-- 头部标题 结束 -->
-          <div class="business-box">
-            
 
+          <div class="business-box">
+
+            <div class="business-item1-box">
+              <div class="item1-left-bgbox">
+                <img src="./img/service/tax/ts-bg1.png" alt="" />
+              </div>
+              <div class="item1-right-bgbox">
+                <img src="./img/service/tax/ts-item1.png" alt="" />
+              </div>
+            </div>
+
+            <div class="business-item2-box">
+              <div class="item2-left-bgbox">
+                <img src="./img/service/tax/ts-item2.png" alt="" />
+              </div>
+              <div class="item2-m-bgbox">
+                <img src="./img/service/tax/ts-bg2.png" alt="" />
+              </div>
+              <div class="item2-right-bgbox">
+                <img src="./img/service/tax/ts-item3.png" alt="" />
+              </div>
+            </div>
+
+            <div class="business-item3-box">
+              <div class="item3-left-bgbox">
+                <img src="./img/service/tax/ts-bg3.png" alt="" />
+              </div>
+              <div class="item3-m-bgbox">
+                <img src="./img/service/tax/ts-item4.png" alt="" />
+              </div>
+              <div class="item3-right-bgbox">
+                <img src="./img/service/tax/ts-item5.png" alt="" />
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -455,7 +486,7 @@
     <!-- 特色业务 结束 -->
 
     <!-- 我们的客户 开始 -->
-    <section class="customer" style="margin-top: 0.6rem;">
+    <section class="customer" style="margin-top: 0.6rem;padding-top: 0.6rem;">
       <div class="container-fluid">
         <div class="row justify-content-center">
           <!-- 头部标题 开始 -->
