--- a/aboutUs.html
+++ b/aboutUs.html
@@ -174,7 +174,7 @@
 									</div>
 									<!-- vido -->
 									<div class="vido-box">
-										<video src="" width="100%" height="100%" controls></video>
+										<video src="https://www.runoob.com/try/demo_source/movie.mp4" width="100%" height="100%" controls></video>
 									</div>
 								</div>
 
