--- a/index.html
+++ b/index.html
@@ -444,53 +444,41 @@
 			</div>
 		</section>
 		<!-- 我们的客户 结束 -->
+		
 		<!-- 数字数据模块 开始 -->
 		<section id="dataNumber" class="dataNumber">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row dataNumber-box">
-					<div class="col-lg-6 col-md-6 col-xl-6 dataNumber-lbox">
-						<img src="./img/icon-index-dt.png" alt="" />
+					<div class="dataNumber-lbox">
+						<div class="vido-box1">
+							<video src="https://www.runoob.com/try/demo_source/movie.mp4" width="100%" height="100%" controls muted autoplay="autoplay" loop="loop"></video>
+						</div>
 					</div>
-					<div class="col-lg-6 col-md-6 col-xl-6 dataNumber-rbox">
+
+					<div class="dataNumber-rbox">
+
 						<div class="dataNumber-rbox-item">
-							<div class="rbox-item-box">
-								<div class="rbox-item-namber">
-									<p class="item-namber"><span class="count">10000</span><span>+</span></p>
-									<p style="padding-top: 6px;">项目服务</p>
-								</div>
-								<i class="i-img">
-									<img src="./img/icon-bz-2.png" />
-								</i>
-							</div>
+							<img src="./img/index-icon-sz1.png" class="i-img"/>
+							<p class="rbox-item-title">服务项目</p>
+							<p class="item-namber"><span class="count">10000</span><span>+</span></p>
 						</div>
 						<div class="dataNumber-rbox-item">
-							<div class="rbox-item-box">
-								<div class="rbox-item-namber">
-									<p class="item-namber"><span class="count">8500</span><span>+</span></p>
-									<p style="padding-top: 6px;">服务企业</p>
-								</div>
-								<i class="i-img">
-									<img src="./img/icon-bz-2.png" />
-								</i>
-							</div>
+							<img src="./img/index-icon-sz2.png" class="i-img"/>
+							<p class="rbox-item-title">服务企业</p>
+							<p class="item-namber"><span class="count">8500</span><span>+</span></p>
 						</div>
 						<div class="dataNumber-rbox-item">
-							<div class="rbox-item-box">
-								<div class="rbox-item-namber">
-									<p class="item-namber"><span class="count">21</span><span>+</span></p>
-									<p style="padding-top: 6px;">遍及省市</p>
-								</div>
-								<i class="i-img">
-									<img src="./img/icon-bz-3.png" />
-								</i>
-							</div>
+							<img src="./img/index-icon-sz3.png" class="i-img"/>
+							<p class="rbox-item-title">遍及城市</p>
+							<p class="item-namber"><span class="count">21</span><span>+</span></p>
 						</div>
+
 					</div>
 				</div>
-
 			</div>
 		</section>
 		<!-- 数字数据模块 结束 -->
+
 		<!-- 新闻动态开始 -->
 		<section id="newsDynamic" class="newsDynamic">
 			<div class="container-fluid">
