--- a/index.html
+++ b/index.html
@@ -707,6 +707,217 @@
 		</section>
 
 		<!-- 我们的团队 结束 -->
+
+
+		<!-- 导师专题 开始 -->
+		<section id="tutorTopic" class="tutorTopic">
+			<div class="container-fluid">
+				<div class="section-title-box" style="padding-left:1.5rem;padding-right:1.5rem;">
+					<div>
+						<div class="section-l-title">导师专题</div>
+						<p class="section-l-eltitle">Tutor</p>
+					</div>
+				</div>
+				<div class="section-inner">
+					<div id="tutorTopic-carousel" class="tutorTopic-carousel">
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+						<a href="javascript:0;" class="item">
+							<img src="./img/team-1.png" class="tutorTopic-img" />
+							<div class="tutorTopic-title-box">
+								<div class="tutorTopic-item-box">
+									<div class="tutorTopic-name">王文龙</div>
+									<div class="tutorTopic-text">中国注册会计师</div>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+								<div class="split-line"></div>
+								<div class="tutorTopic-p-box">
+									<p>合并财务报表的编制</p>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- 导师专题 结束 -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		<div class="footerTop">
 			<div class="container">
 				<div class="row justify-content-center">
